--- a/xAwareness/Properties/Resources.resx
+++ b/xAwareness/Properties/Resources.resx
@@ -232,6 +232,9 @@
   <data name="Irelia_Square_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Irelia_Square_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Ivern_Square_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Ivern_Square_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Janna_Square_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Janna_Square_0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
